[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scripts/SceneScripts/DeckEditor.gd" type="Script" id=1]
[ext_resource path="res://Art/UI/un_check.png" type="Texture" id=2]
[ext_resource path="res://Art/UI/hover.png" type="Texture" id=3]
[ext_resource path="res://Art/UI/hover_arrow.png" type="Texture" id=4]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/UI/DeckDisplayX.tscn" type="PackedScene" id=6]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonPressed.tres" type="StyleBox" id=7]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonHover.tres" type="StyleBox" id=8]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonNormal.tres" type="StyleBox" id=9]
[ext_resource path="res://Art/UI/drop_down.png" type="Texture" id=10]
[ext_resource path="res://Scenes/UI/OptionDisplay.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/UI/OptionSelector.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/UI/LoadingWindow.tscn" type="PackedScene" id=13]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="Theme" id=11]
default_font = ExtResource( 5 )
PopupMenu/colors/font_color = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_accel = Color( 0, 0, 0, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0, 0, 0, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_separator = Color( 0, 0, 0, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = null
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = ExtResource( 8 )
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = ExtResource( 9 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = ExtResource( 7 )

[node name="DeckEditor" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="CenterControl"]
margin_left = -462.0
margin_top = -230.0
margin_right = -300.0
margin_bottom = -65.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyButton" type="Button" parent="CenterControl/Menu"]
visible = false
margin_right = 162.0
margin_bottom = 23.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Ready"

[node name="Sprite" type="Sprite" parent="CenterControl/Menu/ReadyButton"]
position = Vector2( 182, 12.5 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="RandomizeButton" type="Button" parent="CenterControl/Menu"]
visible = false
margin_right = 162.0
margin_bottom = 25.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Randomize"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="CenterControl/Menu"]
margin_right = 162.0
margin_bottom = 23.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Save Deck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="CenterControl/Menu"]
margin_top = 33.0
margin_right = 162.0
margin_bottom = 56.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Load Deck"

[node name="NewButton" type="Button" parent="CenterControl/Menu"]
margin_top = 66.0
margin_right = 162.0
margin_bottom = 89.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "New Deck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButton" type="Button" parent="CenterControl/Menu"]
margin_top = 99.0
margin_right = 162.0
margin_bottom = 122.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Delete Deck File"

[node name="MainMenuButton" type="Button" parent="CenterControl/Menu"]
margin_top = 132.0
margin_right = 162.0
margin_bottom = 155.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentDisplay" type="VBoxContainer" parent="CenterControl"]
margin_left = -462.0
margin_top = -32.0
margin_right = -300.0
margin_bottom = 268.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveDisplay" type="Node2D" parent="CenterControl"]
visible = false
z_index = 2

[node name="MouseDisable" type="ColorRect" parent="CenterControl/SaveDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -1024.0
margin_right = 1024.0
margin_bottom = 1024.0
rect_min_size = Vector2( 2048, 2048 )
color = Color( 0.313726, 0.0509804, 0.698039, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="CenterControl/SaveDisplay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -48.0
margin_right = 128.0
margin_bottom = 48.0
texture = ExtResource( 3 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="CenterControl/SaveDisplay/Background"]
margin_left = 20.0
margin_top = 20.0
margin_right = 236.0
margin_bottom = 44.0
custom_styles/read_only = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 5 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="CenterControl/SaveDisplay/Background"]
margin_left = 67.0
margin_top = 58.71
margin_right = 108.0
margin_bottom = 78.71
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="CenterControl/SaveDisplay/Background"]
margin_left = 147.0
margin_top = 58.71
margin_right = 189.0
margin_bottom = 78.71
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageHolder" type="Node2D" parent="CenterControl"]
position = Vector2( 0, 32 )
scale = Vector2( 1.5, 1.5 )

[node name="FusionPreview" type="Node2D" parent="CenterControl"]
position = Vector2( 20, 212 )

[node name="DeckDisplay" parent="CenterControl" instance=ExtResource( 6 )]
position = Vector2( 320, -240 )
deckMax = 20

[node name="LArrow" type="Node2D" parent="CenterControl"]
visible = false
position = Vector2( 20, 20 )

[node name="Arrow1" type="Sprite" parent="CenterControl/LArrow"]
position = Vector2( -10, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="Arrow2" type="Sprite" parent="CenterControl/LArrow"]
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="Button" type="Button" parent="CenterControl/LArrow"]
margin_left = -20.0
margin_top = -17.0
margin_right = 10.0
margin_bottom = 17.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RArrow" type="Node2D" parent="CenterControl"]
visible = false
position = Vector2( 20, 20 )

[node name="Arrow2" type="Sprite" parent="CenterControl/RArrow"]
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
flip_h = true

[node name="Arrow1" type="Sprite" parent="CenterControl/RArrow"]
position = Vector2( -10, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
flip_h = true

[node name="Button2" type="Button" parent="CenterControl/RArrow"]
margin_left = -20.0
margin_top = -17.0
margin_right = 10.0
margin_bottom = 17.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SortButtons" type="Node2D" parent="CenterControl"]
visible = false
position = Vector2( 0, -204 )
z_index = 3

[node name="Sort Order" type="Label" parent="CenterControl/SortButtons"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -56.0
margin_right = -1.00031
margin_bottom = -37.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sort Order:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterControl/SortButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.5
margin_top = -16.0
margin_right = 197.5
margin_bottom = 16.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeButton" type="Button" parent="CenterControl/SortButtons/HBoxContainer"]
margin_right = 128.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 5 )
text = "      Type      "

[node name="PowerButton" type="Button" parent="CenterControl/SortButtons/HBoxContainer"]
margin_left = 138.0
margin_right = 260.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 5 )
text = "    Power     "

[node name="ToughnessButton" type="Button" parent="CenterControl/SortButtons/HBoxContainer"]
margin_left = 270.0
margin_right = 395.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 5 )
text = " Toughness "

[node name="RarityButton" type="Button" parent="CenterControl/SortButtons/HBoxContainer"]
margin_left = 405.0
margin_right = 474.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 5 )
text = "Rarity"

[node name="SortNode" type="Node2D" parent="CenterControl"]
position = Vector2( -96, -204 )
z_index = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CenterControl/SortNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.5
margin_top = -14.5
margin_right = 108.5
margin_bottom = 14.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SortLabel" type="Label" parent="CenterControl/SortNode/HBoxContainer"]
margin_top = 6.0
margin_right = 108.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sort Order: "

[node name="SortButton" type="OptionButton" parent="CenterControl/SortNode/HBoxContainer"]
margin_left = 112.0
margin_right = 252.0
margin_bottom = 32.0
rect_min_size = Vector2( 140, 32 )
theme = SubResource( 11 )
custom_icons/arrow = ExtResource( 10 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "AAAAAAAAAA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionSelector" parent="CenterControl/SortNode/HBoxContainer" instance=ExtResource( 12 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 0.0
margin_right = 268.0
margin_bottom = 32.0

[node name="OptionDisplay" parent="CenterControl" instance=ExtResource( 11 )]
visible = false

[node name="LoadingOffset" type="Node2D" parent="CenterControl"]
z_index = 3

[node name="LoadingWindow" parent="CenterControl/LoadingOffset" instance=ExtResource( 13 )]
visible = false

[connection signal="pressed" from="CenterControl/Menu/ReadyButton" to="." method="onReadyPressed"]
[connection signal="pressed" from="CenterControl/Menu/RandomizeButton" to="." method="onRandomizePressed"]
[connection signal="pressed" from="CenterControl/Menu/SaveButton" to="." method="onSavePressed"]
[connection signal="pressed" from="CenterControl/Menu/LoadButton" to="." method="onLoadPressed"]
[connection signal="pressed" from="CenterControl/Menu/NewButton" to="." method="onNewPressed"]
[connection signal="pressed" from="CenterControl/Menu/DeleteButton" to="." method="onDeleteButtonPressed"]
[connection signal="pressed" from="CenterControl/Menu/MainMenuButton" to="." method="onExitPressed"]
[connection signal="text_entered" from="CenterControl/SaveDisplay/Background/LineEdit" to="." method="onSaveEnter"]
[connection signal="pressed" from="CenterControl/SaveDisplay/Background/SaveButton" to="." method="onFileSaveButtonPressed"]
[connection signal="pressed" from="CenterControl/SaveDisplay/Background/BackButton" to="." method="onFileSaveBackPressed"]
[connection signal="pressed" from="CenterControl/LArrow/Button" to="." method="leftArrowPressed"]
[connection signal="pressed" from="CenterControl/RArrow/Button2" to="." method="rightArrowPressed"]
[connection signal="pressed" from="CenterControl/SortButtons/HBoxContainer/TypeButton" to="." method="setSortOrder" binds= [ 0 ]]
[connection signal="pressed" from="CenterControl/SortButtons/HBoxContainer/PowerButton" to="." method="setSortOrder" binds= [ 1 ]]
[connection signal="pressed" from="CenterControl/SortButtons/HBoxContainer/ToughnessButton" to="." method="setSortOrder" binds= [ 2 ]]
[connection signal="pressed" from="CenterControl/SortButtons/HBoxContainer/RarityButton" to="." method="setSortOrder" binds= [ 3 ]]
[connection signal="item_selected" from="CenterControl/SortNode/HBoxContainer/SortButton" to="." method="setSortOrder"]
